tools/tests/errors/surf_cont_03.ki
# Bytes index out of range
var b = Bytes([1, 2, 3])
discard b[9]
